--- a/GeneralClashRule.ini
+++ b/GeneralClashRule.ini
@@ -30,7 +30,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 国外流量`url-test`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]✈️ 手动选择
 custom_proxy_group=✈️ 手动选择`select`.*
-custom_proxy_group=🎯 国内流量`select`[]DIRECT`(CN|电信|联通|移动)`[]✈️ 手动选择`
+custom_proxy_group=🎯 国内流量`select`[]DIRECT`(CN|电信|联通|移动)`[]✈️ 手动选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]🎯 国内流量`[]✈️ 手动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🎯 国内流量`[]🚀 国外流量
 custom_proxy_group=🧚 ChatGPT`select`(美国|US|United States)`(日本|JP|Japan)`[]✈️ 手动选择
