--- a/GeneralClashRule.ini
+++ b/GeneralClashRule.ini
@@ -37,7 +37,7 @@ custom_proxy_group=🎯 国内流量`select`[]DIRECT`(CN|电信|联通|移动)`[
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]🎯 国内流量`[]✈️ 手动选择
 custom_proxy_group=🔍 谷歌服务`select`[]🚀 国外流量`[]✈️ 手动选择
 custom_proxy_group=👨‍💻 GitHub`select`[]🚀 国外流量`[]🎯 国内流量`[]✈️ 手动选择
-custom_proxy_group=🧚 ChatGPT`select`[]🚀 国外流量`[]🎯 国内流量`[](美国|US|United States)`(日本|JP|Japan)`[]✈️ 手动选择
+custom_proxy_group=🧚 ChatGPT`select`[]🚀 国外流量`[]🎯 国内流量`(美国|US|United States)`(日本|JP|Japan)`[]✈️ 手动选择
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 国内流量`[]🚀 国外流量`[]✈️ 手动选择
 custom_proxy_group=🎮 游戏平台`select`[]🎯 国内流量`[]🚀 国外流量`[]✈️ 手动选择
 custom_proxy_group=🌍 国外媒体`select`[]🚀 国外流量`[]✈️ 手动选择
